--- a/docs/static/style.css
+++ b/docs/static/style.css
@@ -5,6 +5,7 @@ body{
     padding:0.5rem;
     background:#eee;
     font-family:Arial,Helvetica,sans-serif;
+    font-size:1.4rem;
 }
 
 a{text-decoration:none;}
@@ -42,13 +43,15 @@ blockquote{
     display:flex;
     flex-wrap:wrap;
 }
+aside ul{padding:0;}
+aside li{list-style:none;}
 
 /* ================ Headings ================ */
 h1{
     width:100%;
     margin:auto;
     text-align:center;
-    font-size:2.5rem;
+    font-size:2.5em;
     font-weight:bold;
     padding:0.3rem;
     margin-bottom:1rem;
