--- a/docs/static/style.css
+++ b/docs/static/style.css
@@ -1,34 +1,48 @@
+/** 
+    See import directive at the end of this file
+    @history    2017, Thierry Graff : Creation
+**/
 
 /* ================ General styles ================ */
+/* Normalization */ *{
+    margin:0;
+    box-sizing:border-box;
+}
+
 body{
     margin:0;
     padding:0.5rem;
     background:#eee;
     font-family:Arial,Helvetica,sans-serif;
-    font-size:1.4rem;
 }
 
 a{text-decoration:none;}
 
-pre{margin:1rem 2rem; background:lightgrey; font-size:1rem; padding:0.5rem;}
+pre{
+    white-space:pre-wrap;
+    margin:1rem 2rem;
+    background:lightgrey;
+    font-size:1rem;
+    padding:.5rem;
+}
 pre.normal{background:none;}
 code.color{background:lightgrey;}
 .pre{white-space:pre;}
 
 img{display: block; background:white;}
-img.center{border:none;margin:auto;}
 
-ul.spaced li,ol.spaced li{padding-bottom:0.8rem;}
-ul.naked li,ol.naked li{list-style-type:none;}
+ul.spaced>li,ol.spaced>li{padding-bottom:0.8rem;}
+ul.naked>li,ol.naked>li{list-style-type:none;}
+ul.simple{list-style-type: '- ';}
 
 table.border{border-collapse:collapse;}
 table.border td{border: 1px solid #a2a9b1;}
 
 cite{
+    font-family:DejaVu,serif;
     display:block;
     margin:1rem;
 }
-
 blockquote{
     display:block;
     border:1px solid grey;
@@ -38,12 +52,18 @@ blockquote{
     background:#fee;
 }
 
+.formula{
+    padding:0.5em;
+    font-family:"Courier New",Courier,monospace;
+    border:1px solid grey;
+    display:inline-block;
+}
+
 /* ================ Site layout ================ */
 .flex-wrap{
     display:flex;
     flex-wrap:wrap;
 }
-aside ul{padding:0;}
 aside li{list-style:none;}
 
 /* ================ Headings ================ */
@@ -51,21 +71,26 @@ h1{
     width:100%;
     margin:auto;
     text-align:center;
-    font-size:2.5em;
+    font-size:2.5rem;
     font-weight:bold;
     padding:0.3rem;
     margin-bottom:1rem;
 }
 h1 .subtitle{font-size:0.8em;}
-h2{font-size:2rem;}
-h3{font-size:1.5rem;}
+h2{
+    font-size:2rem;
+    margin:1rem 0;
+}
+h3{
+    font-size:1.5rem;
+    margin:1rem 0;
+}
 
 
 /* ================ Navigation ================ */
-
 .prevnext{
     font-family:DejaVu,serif;
-    position: fixed; top:0px; right:0px;
+    position:fixed; top:0px; right:0px;
     margin:1rem;
     width:75px; height:40px
 }
@@ -90,7 +115,6 @@ h3{font-size:1.5rem;}
 
 
 /* ================ Particular elements ================ */
-
 .warning{
     width:50%;
     padding:.5rem;
@@ -100,7 +124,7 @@ h3{font-size:1.5rem;}
 }
 
 .intro{
-    font-size:1.2em;
+    font-size:1.4rem;
     margin:1rem 0 1rem 2rem;
 }
 
@@ -134,6 +158,10 @@ table.wikitable tr td code{
 
 /* ================ Style shortcuts ================ */
 
+.clear-left{clear:left;}
+.float-left{float:left;}
+
+.inline{display:inline;}
 .inline-block{display:inline-block;}
 .block{display:block;}
 
@@ -142,39 +170,94 @@ table.wikitable tr td code{
 .dejavu{font-family:DejaVu,serif;}
 
 .bold{font-weight:bold;}
+.normal{font-weight:normal;}
+.word-spacing{word-spacing:1em;}
 
 .center{text-align:center;}
+.justify{text-align:justify;}
 
+.vertical-align-top{vertical-align:top;}
+.vertical-align-middle{vertical-align:middle;}
+
+.background-none{background:none;}
+.red{color:red;}
+
+.border-none{border:none;}
+.border-radius10{border-radius:10px;}
 .border{border:1px solid grey;}
+.border2{border:2px solid grey;}
+.border-left{border-left:1px solid grey;}
+.border-right{border-right:1px solid grey;}
+.border-top{border-top:1px solid grey;}
+.border-bottom{border-bottom:1px solid grey;}
 
+.margin-auto{margin:auto;}
 .margin{margin:1rem;}
 .margin0{margin:0;}
+.margin05{margin:.5rem;}
 .margin2{margin:2rem;}
-.margin-top{margin-top:1rem;}
+.margin3{margin:3rem;}
+
+.margin-top{margin-top:1rem;}                            
 .margin-top0{margin-top:0;}
+.margin-top05{margin-top:.5rem;}
+.margin-top2{margin-top:2rem;}
+.margin-top3{margin-top:3rem;}
+
 .margin-left{margin-left:1rem;}
 .margin-left0{margin-left:0;}
-.margin-bottom{margin-bottom:1rem;}
+.margin-left05{margin-left:.5rem;}
+.margin-left2{margin-left:2rem;}
+.margin-left3{margin-left:3rem;}
+.margin-left5{margin-left:5rem;}
+
+.margin-bottom{margin-bottom:1rem;}                            
 .margin-bottom0{margin-bottom:0;}
+.margin-bottom05{margin-bottom:.5rem;}
+.margin-bottom2{margin-bottom:2rem;}
+.margin-bottom3{margin-bottom:3rem;}
+
 .margin-right{margin-right:1rem;}
 .margin-right0{margin-right:0;}
+.margin-right05{margin-right:.5rem;}
+.margin-right2{margin-right:2rem;}
+.margin-right3{margin-right:3rem;}
 
 .padding{padding:1rem;}
 .padding0{padding:0;}
+.padding05{padding:.5rem;}
 .padding2{padding:2rem;}
+.padding3{padding:3rem;}
+
 .padding-top{padding-top:1rem;}
 .padding-top0{padding-top:0;}
+.padding-top05{padding-top:.5rem;}
+.padding-top2{padding-top:2rem;}
+.padding-top3{padding-top:3rem;}
+
 .padding-left{padding-left:1rem;}
-.padding-left0{padding-left:0;}
+.padding-left0{padding-left:0;}                                      
+.padding-left05{padding-left:.5rem;}
+.padding-left2{padding-left:2rem;}
+.padding-left3{padding-left:3rem;}
+
 .padding-bottom{padding-bottom:1rem;}
 .padding-bottom0{padding-bottom:0;}
-.padding-right{padding-right:1em;}
+.padding-bottom05{padding-bottom:.5rem;}
+.padding-bottom2{padding-bottom:2rem;}
+.padding-bottom3{padding-bottom:3rem;}
+
+.padding-right{padding-right:1rem;}
 .padding-right0{padding-right:0;}
+.padding-right05{padding-right:.5rem;}
+.padding-right2{padding-right:2rem;}
+.padding-right3{padding-right:3rem;}
 
 .big1{font-size:1.1rem;}
 .big2{font-size:1.2rem;}
 .big3{font-size:1.3rem;}
 .big4{font-size:1.4rem;}
+.big5{font-size:1.5rem;}
 .big20{font-size:2rem;}
 .big30{font-size:3rem;}
 .big40{font-size:4rem;}
