--- a/docs/static/style.css
+++ b/docs/static/style.css
@@ -20,7 +20,7 @@ a{text-decoration:none;}
 
 pre{
     white-space:pre-wrap;
-    margin:1rem 2rem;
+    margin:1rem;
     background:lightgrey;
     font-size:1rem;
     padding:.5rem;
