--- a/docs/static/gauquelin5.css
+++ b/docs/static/gauquelin5.css
@@ -36,9 +36,7 @@ body{
 
 /* ================ Design ================ */
 .main{
-    padding-right:.5rem;
-    padding-left:.5rem;
-    padding-bottom:1rem;
+    padding:1rem .5rem 1rem 1rem;
 }
 
 .left{
