--- a/docs/static/gauquelin5.css
+++ b/docs/static/gauquelin5.css
@@ -39,6 +39,11 @@ body{
     padding:1rem .5rem 1rem 1rem;
 }
 
+h1{
+    margin-top:2rem;
+    margin-bottom:2rem;
+}
+
 .left{
     padding-top:2rem;
     border-left:1px solid grey;
