Modify pages index and why

--- a/docs/static/gauquelin5.css
+++ b/docs/static/gauquelin5.css
@@ -18,7 +18,7 @@ body{
 
 /* container and footer = direct children of body */
 .container{
-   flex: 1 0 auto;
+   flex:1 0 auto;
    display:flex;   
    flex-flow:row wrap;
 }
@@ -49,6 +49,7 @@ h1{
     border-left:1px solid grey;
     background:lightgoldenrodyellow;
     font-size:.9rem;
+    border-right:1px solid grey;
 }
 .left ul{
     padding-left:1rem;
