Move list of historical tests in an other project

--- a/docs/static/style.css
+++ b/docs/static/style.css
@@ -26,7 +26,7 @@ pre{
 }
 pre.normal{background:none;}
 code.color{background:lightgrey;}
-.pre{white-space:pre;}
+.pre{white-space:pre-wrap;}
 
 img{display: block; background:white;}
 
