--- a/docs/static/gauquelin5.css
+++ b/docs/static/gauquelin5.css
@@ -7,6 +7,8 @@ body{
     padding-bottom:1em;
 }
 
+code{font-size:1.1em;}
+
 /* ================ Site layout ================ */
 html{height:100%;}
 
