Update doc for serie A + little improvements

--- a/docs/static/style.css
+++ b/docs/static/style.css
@@ -84,6 +84,9 @@ h3{
     font-size:1.5rem;
     margin:1rem 0;
 }
+h4{
+    margin:.7rem 0;
+}
 
 
 /* ================ Navigation ================ */
