Doc : minor tweaks

--- a/docs/static/style.css
+++ b/docs/static/style.css
@@ -1,5 +1,6 @@
 /** 
-    See import directive at the end of this file
+    Generic styles, to be imported by stylesheet specific to a given site
+    
     @history    2017, Thierry Graff : Creation
 **/
 
