--- a/docs/static/gauquelin5.css
+++ b/docs/static/gauquelin5.css
@@ -36,7 +36,7 @@ body{
     flex:1 1 85%;
 }
 
-/* ================ Design ================ */
+/* ================ Particular elements ================ */
 .main{
     padding:1rem .5rem 1rem 1rem;
 }
@@ -66,3 +66,6 @@ h1{
 .toc{
     margin-bottom:1em;
 }
+
+table.alternate tr:nth-child(even) {background: #ffc}
+table.alternate tr:nth-child(odd) {background: #ddd}
