Continue 1083MED fixGnr => tweak2csv, E1, E3

--- a/docs/static/gauquelin5.css
+++ b/docs/static/gauquelin5.css
@@ -67,5 +67,5 @@ h1{
     margin-bottom:1em;
 }
 
-table.alternate tr:nth-child(even) {background: #ffc}
+table.alternate tr:nth-child(even) {background: #eee}
 table.alternate tr:nth-child(odd) {background: #ddd}
