--- a/docs/static/style.css
+++ b/docs/static/style.css
@@ -190,6 +190,7 @@ table.wikitable tr td code{
 .border{border:1px solid grey;}
 .border2{border:2px solid grey;}
 .border-left{border-left:1px solid grey;}
+.border-left0{border-left:0;}
 .border-right{border-right:1px solid grey;}
 .border-top{border-top:1px solid grey;}
 .border-bottom{border-bottom:1px solid grey;}
