Restore raw2csv in the main process (cura A)
Repair a mistake : the introduction of raw2full to replace raw2csv leads
to modify export. This was prematurate because all corrections done
after raw2full are not yet integrated.
The corresponding export is renamed exportfromfull.

--- a/docs/static/style.css
+++ b/docs/static/style.css
@@ -118,6 +118,7 @@ h4{
 .prevnext a.top{top:0px; right:40px;}
 .prevnext a.prev{top:25px; right:75px;}
 .prevnext a.next{top:25px; right:5px;}
+.prevnext a.topage{top:33px; right:35px; color:#ccccff; font-size:1.1rem;}
 
 /* table of content */
 .toc{font-family:Arial,Helvetica,sans-serif;}
