Doc : various improvements

--- a/docs/static/style.css
+++ b/docs/static/style.css
@@ -75,6 +75,8 @@ table.alternate tr:nth-child(odd) {background: #ddd}
 
 .center{text-align:center;}
 .justify{text-align:justify;}
+.right{text-align:right;}
+.left{text-align:left;}                     
 
 .vertical-align-top{vertical-align:top;}
 .vertical-align-middle{vertical-align:middle;}
