--- a/docs/static/gauquelin5.css
+++ b/docs/static/gauquelin5.css
@@ -177,14 +177,14 @@ table.wikitable{
     border-collapse:collapse;
 }
 table.wikitable > tr > th, table.wikitable > * > tr > th {
-    /* background-color: #eaecf0; */
-    background-color: lightblue;
-    text-align: center;
+    /* #f1f8ff #eaecf0; */
+    background-color:lightblue;
+    text-align:center;
     vertical-align:top;
 }
 table.wikitable > tr > th, table.wikitable > tr > td, table.wikitable > * > tr > th, table.wikitable > * > tr > td {
-    border: 1px solid #a2a9b1;
-    padding: 0.2rem 0.4rem;
+    border:1px solid #a2a9b1;
+    padding:0.2rem 0.4rem;
     vertical-align:top;
 }
 table.wikitable tr td code{
