BCK - Bulk backup commit - several topics - bd build partly broken

--- a/docs/static/gauquelin5.css
+++ b/docs/static/gauquelin5.css
@@ -7,7 +7,7 @@ body{
 }
 
 
-code{font-size:1.1em;}
+code{font-size:1.1rem;}
 
 /* ================ Site layout ================ */
 html{height:100%;}
