--- a/docs/static/gauquelin5.css
+++ b/docs/static/gauquelin5.css
@@ -1,13 +1,19 @@
+/******************************************************************************
+    Style for Gauquelin5 documentation.
+    
+    @license    GPL
+    @history    2017, Thierry Graff : Creation
+********************************************************************************/
+
+@import "normalize.css";
 @import "style.css";
 
-body{
-    padding-top:0;
-    padding-left:0;
-    padding-bottom:1em;
+@media print{
+    .left,
+    .prevnext{
+        display:none;
+    }
 }
-
-
-code{font-size:1.1rem;}
 
 /* ================ Site layout ================ */
 html{height:100%;}
@@ -15,35 +21,45 @@ html{height:100%;}
 body{
     display:flex;
     flex-direction:column;
+    font-family:Arial,Helvetica,sans-serif;
     height:100%;
+    line-height:1.3;
+    background:#eee;
+    padding-top:0;
+    padding-left:0;
+    padding-bottom:1rem;
+    margin:0;
 }
 
-/* container and footer = direct children of body */
+/* .container and .main = direct children of body */
 .container{
    flex:1 0 auto;
-   display:flex;   
+   display:flex;
    flex-flow:row wrap;
 }
-/* in the html, write .left sidebar after .main area */
-.container :nth-child(2) { order: 1; }
-.container :nth-child(1) { order: 2; }
 
-/* left and main = direct children of container */
+/* .left and .main = direct children of .container */
 .main{
     flex:1 1 85%;
     padding:1rem .5rem 2rem 1rem;
 }
 
-aside li{list-style:none;}
+/* In the html code, write .left sidebar after .main area */
+.container :nth-child(2) { order: 1; }
+.container :nth-child(1) { order: 2; }
+
 .left{
     flex:1 1 15%;
 }
 .left{
     margin-top:4rem;
     border-left:1px solid grey;
-    background:lightgoldenrodyellow;
+    background:#f2f2d7;
     font-size:.9rem;
     border-right:1px solid grey;
+}
+.left li{
+    list-style:none;
 }
 .left ul{
     padding-left:1rem;
@@ -55,64 +71,13 @@ aside li{list-style:none;}
     padding-bottom:0.3rem;
 }
 
-/* ================ Headings ================ */
-h1{
-    width:100%;
-    margin:auto;
-    text-align:center;
-    font-size:2.5rem;
-    font-weight:bold;
-    padding:0.3rem;
-    margin-bottom:4rem;
-}
-h1 .subtitle{font-size:0.8em;}
-h2{
-    font-size:2rem;
-    margin:1rem 0;
-}
-h3{
-    font-size:1.5rem;
-    margin:1rem 0;
-}
-h4{
-    margin:.7rem 0;
-}
-
-/* ================ Particular elements ================ */
-
-.flex-wrap{
-    display:flex;
-    flex-wrap:wrap;
-}
-
-cite{
-    font-family:DejaVu,serif;
-    display:block;
-    margin:1rem;
-}
-blockquote{
-    display:block;
-    border:1px solid grey;
-    padding:5px;
-    margin:1rem;
-    font-family:DejaVu,serif;
-    background:#fee;
-}
-
-.formula{
-    padding:0.5em;
-    font-family:"Courier New",Courier,monospace;
-    border:1px solid grey;
-    display:inline-block;
-}
-
-/* ================ Navigation ================ */
+/* Navigation */
 .prevnext{
     font-family:DejaVu,serif;
-    position:fixed; top:0px; left:0px;
+    position:fixed; top:0; left:0;
     margin:0;
     width:15%; height:4rem;
-    background:lightgoldenrodyellow;
+    background:#f2f2d7;
     border-right:1px solid grey;
 }
 .prevnext a{
@@ -123,8 +88,8 @@ blockquote{
     font-weight:bolder;
     font-size:2rem;
 }
-.prevnext a.index{top:0px; left:50px; font-size:0.5rem;}
-.prevnext a.top{top:0px; left:80px;}
+.prevnext a.index{top:0; left:50px; font-size:0.5rem;}
+.prevnext a.top{top:0; left:80px;}
 .prevnext a.prev{top:25px; left:45px;}
 .prevnext a.next{top:25px; left:110px;}
 .prevnext a.topage{
@@ -141,7 +106,19 @@ blockquote{
 .toc{padding:0;}
 .toc>ul>li>a{font-weight:bold;}
 
-/* ================ Particular elements ================ */
+.intro{
+    font-size:1.4rem;
+    margin:1rem 0 1rem 2rem;
+}
+
+
+/* ================ Semantic ================ */
+.formula{
+    padding:0.5em;
+    font-family:"Courier New",Courier,monospace;
+    border:1px solid grey;
+    display:inline-block;
+}
 .warning{
     width:50%;
     padding:.5rem;
@@ -149,22 +126,117 @@ blockquote{
     background:gold;
     border:1px solid grey;
 }
+.tip{
+    margin:1rem;
+    padding:1rem;
+    background:lightblue;
+    border:2px solid yellow;
+}
 
-.intro{
-    font-size:1.4rem;
-    margin:1rem 0 1rem 2rem;
+/* ================ Particular elements ================ */
+h1{
+    width:100%;
+    margin:auto;
+    text-align:center;
+    font-size:2.5rem;
+    font-weight:bold;
+    padding:0.3rem;
+    margin-bottom:4rem;
+}
+h1 .subtitle{
+    font-size:0.8em;
+}
+h2{
+    font-size:2rem;
+    margin:1rem 0;
+}
+h3{
+    font-size:1.5rem;
+    margin:1rem 0;
+}
+h4{
+    margin:.7rem 0;
+}
+
+a{
+    text-decoration:none;
+}
+
+img{
+    display: block;
+    background:white;
+}
+
+.pre{
+    white-space:pre-wrap;
+}
+pre{
+    white-space:pre-wrap;
+    margin:1rem;
+    background:lightgrey;
+    padding:.5rem;
+    border-radius:3px;
+    border:1px solid #717a9f;
+    line-height:1.15;
+}
+pre.normal{
+    background:none;
+    border:none;
+    margin:0;
+    margin-left:1em;
+    padding:0;
+}
+code{
+    font-size:1.1rem;
+}
+code.color{
+    background:lightgrey;
+}
+
+cite{
+    font-family:DejaVu,serif;
+    display:block;
+    margin:1rem;
+}
+blockquote{
+    display:block;
+    border:1px solid grey;
+    padding:5px;
+    margin:1rem;
+    font-family:DejaVu,serif;
+    background:#fee;
+}
+
+table.border{
+    border-collapse:collapse;
+}
+table.border td{
+    border: 1px solid #a2a9b1;
+}
+
+table.alternate tr:nth-child(even){
+    background: #eee
+}
+table.alternate tr:nth-child(odd){
+    background: #ddd
+}
+table.padded2 td{
+    padding:2px;
 }
 
 table.wikitable{
     border-collapse:collapse;
 }
-table.wikitable > tr > th, table.wikitable > * > tr > th {
-    /* #f1f8ff #eaecf0; */
+table.wikitable > tr > th,
+table.wikitable > * > tr > th {
     background-color:lightblue;
     text-align:center;
     vertical-align:top;
 }
-table.wikitable > tr > th, table.wikitable > tr > td, table.wikitable > * > tr > th, table.wikitable > * > tr > td {
+table.wikitable > tr > th,
+table.wikitable > tr > td,
+table.wikitable > * > tr > th,
+table.wikitable > * > tr > td {
     border:1px solid #a2a9b1;
     padding:0.2rem 0.4rem;
     vertical-align:top;
