Doc - minor changes

--- a/docs/static/g5.css
+++ b/docs/static/g5.css
@@ -193,6 +193,7 @@ img{
     white-space:pre-wrap;
 }
 pre{
+    display:table;
     white-space:pre-wrap;
     margin:1rem;
     background:lightgrey;
