--- a/docs/static/g5.css
+++ b/docs/static/g5.css
@@ -138,13 +138,24 @@ body{
     transform:rotate(-90deg);
 }
 
-/* ================ Table of content ================ */
-.toc{
-    font-family:Arial,Helvetica,sans-serif;
-    margin-bottom:1em;
+/* ================ Main elements ================ */
+article{
+    line-height:2;
 }
-.toc ul{list-style-type:none;}
-.toc{padding:0;}
+
+.toc{
+    display:inline-block;
+    background: rgb(207,236,23);
+    background: radial-gradient(circle, rgba(207,236,23,0.0578) 17%, rgba(193,236,245,0.3827) 40%, rgba(213,235,204,0.4415) 47%); 
+    margin:1rem 2rem;
+    padding:1rem 1rem 1rem 0;
+    border:1px dotted black;
+    border-radius:5px;
+    font-family:Arial,Helvetica,sans-serif;
+    line-height:1.6;
+}
+.toc ul{list-style-type:none;margin:0;}
+.toc ul>li{}
 .toc>ul>li>a{font-weight:bold;}
 
 .intro{
