--- a/docs/static/g5.css
+++ b/docs/static/g5.css
@@ -160,7 +160,7 @@ article{
 
 .intro{
     font-size:1.2rem;
-    margin:1rem 0 1rem 2rem;
+    margin:1rem 15rem 1rem 2rem;
 }
 
 /* ================ Particular elements ================ */
