--- a/docs/static/style.css
+++ b/docs/static/style.css
@@ -1,7 +1,7 @@
 /** 
     Style shortcuts
     
-    @history    2017, Thierry Graff : Creation
+    @history    2017, Thierry Graff, Creation
 **/
 
 /* Normalization */
